<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/white_5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/img_bg_orange_title"
            android:layoutDirection="ltr"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_left"
                android:background="@android:color/transparent"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuition"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:fontFamily="@font/lexend_bold" />

        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/lexend_semibold"/>
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:layout_width="200dp"
                            android:layout_height="120dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/img_bg_wallet_1"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ví học lại"
                                android:textSize="14sp"
                                android:fontFamily="@font/lexend_medium"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="200,000"
                                android:textSize="20sp"
                                android:fontFamily="@font/lexend_semibold"
                                android:textColor="@color/white"/>
                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:layout_width="200dp"
                            android:layout_height="120dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/img_bg_wallet_2"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ví học phí"
                                android:textSize="14sp"
                                android:fontFamily="@font/lexend_medium"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="400,000"
                                android:textSize="20sp"
                                android:fontFamily="@font/lexend_semibold"
                                android:textColor="@color/white"/>
                        </LinearLayout>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:layout_width="200dp"
                            android:layout_height="120dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/img_bg_wallet_3"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ví học khác"
                                android:textSize="14sp"
                                android:fontFamily="@font/lexend_medium"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1,200,000"
                                android:textSize="20sp"
                                android:fontFamily="@font/lexend_semibold"
                                android:textColor="@color/white"/>
                        </LinearLayout>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:layout_width="200dp"
                            android:layout_height="120dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/img_bg_wallet_4"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ví ưu đãi"
                                android:textSize="14sp"
                                android:fontFamily="@font/lexend_medium"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="300,000"
                                android:textSize="20sp"
                                android:fontFamily="@font/lexend_semibold"
                                android:textColor="@color/white"/>
                        </LinearLayout>

                    </RelativeLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/img_bg_line"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trade_history"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/lexend_semibold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_trade_history"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>